tests/baselines/reference/typeofThisWithImplicitThis.errors.txt
tests/cases/conformance/types/specifyingTypes/typeQueries/typeofThisWithImplicitThis.ts(2,19): error TS2526: A 'this' type is available only in a non-static member of a class or interface.


==== tests/cases/conformance/types/specifyingTypes/typeQueries/typeofThisWithImplicitThis.ts (1 errors) ====
    function Test1() {
        let x: typeof this.no = 1
                      ~~~~
!!! error TS2526: A 'this' type is available only in a non-static member of a class or interface.
    }
    